Changelog for JVCL 3.0
======================
2004-06-02
- VisualCLX support: use installer to install! // asn
- Updated/fixed Kylix 3(PE) packages. // asn
- cleaned ifdefs VCL/VisualCLX. // asn
2004-05-27
- reimplemented TJvXORCipher, TJvVigenereCipher and JvCaesarCipher from scratch in JvCipher.pas // (rom)
- all components now have palette icons // (rom)
- all palette icons checked and fixed // (rom)
2004-05-24
- Added new docking style, JvDockVIDVCStyle, from devedit // peter3
2004-05-21
- TJvZlibMultiple is now available for C++ Builder 5 and 6
2004-05-19
- Moved JvComputerInfo.pas, JvDeviceChanged.pas, JvDirectories.pas, JvKeyboardStates.pas, 
  JvSystemColors.pas to archive. They are replaced by JvComputerInfoEx.pas // ahuser
2004-05-16
- JvgPointEditor.pas moved from \run to \design // peter3
2004-05-07
- Added support for WeekNumbers in JvDateTimePicker // peter3
- Added AutoHeaders property to NavPane (automatically displays a header in the page(s)) // peter3
2004-05-05
- Moved inspector components to their own package (JvInspector) // marcelb
2004-04-28
- Added JvBackground donation from Robert Rossmair to JvCore // peter3
2004-04-09
- Added OnCustomDraw event to TJvOutlookBar. Also added demo to show it off // peter3
- Added TJvNavPaneToolPanel to the Nav Pane components // peter3
- Added demo for JvDBImage
- Added JvDBImage to JvDB. JvDBImage can handle *any* graphic file format in DB tables // peter3
2004-04-08
- Moved "HMI Controls" and "HMI Non-Visual" and "HMI Indicators" to "HIM Components" palettte // ahuser
- Compatible to newest JCL // ahuser
- All components compile and run under BCB 6 without any error or hint // ahuser
2004-04-07
- New JVCL installer // ahuser
2004-04-05
- Added EDI Component donation from Raymond Alexander. NB! Requires the latest JCL (don't forget to recompile DJVCL.dpk!) // peter3
2004-04-04
- Removed JvTabControl and moved TJvTabControl into JvComCtrls.pas // peter3