@@ -1,0 +1,8 @@
+[Compiler]
+UnsafeType=0
+UnsafeCode=0
+UnsafeCast=0
+[Directories]
+OutputDir=..\..\bin
+UnitOutputDir=..\..\dcu
+SearchPath=..\..\run;..\..\common
