@@ -8,3 +8,6 @@ TJVFORMWALLPAPER BITMAP "TJVFORMWALLPAPER.BMP"
 TJVFORMMAGNET BITMAP "TJVFORMMAGNET.BMP"
 TJVGRADIENTCAPTION BITMAP "TJVGRADIENTCAPTION.BMP"
 TJVFORMAUTOSIZE BITMAP "TJVFORMAUTOSIZE.BMP"
+TJVEMBEDDEDFORMLINK BITMAP "TJVEMBEDDEDFORMLINK.BMP"
+TJVEMBEDDEDFORMPANEL BITMAP "TJVEMBEDDEDFORMPANEL.BMP"
+TJVEMBEDDEDINSTANCEFORMPANEL BITMAP "TJVEMBEDDEDINSTANCEFORMPANEL.BMP"
