@@ -5,7 +5,7 @@
      DO NOT EDIT THIS FILE, IT IS GENERATED BY THE PACKAGE GENERATOR
             ALWAYS EDIT THE RELATED XML FILE (JvAppFrm-R.xml)
 
-     Last generated: 03-02-2004  01:13:10 UTC
+     Last generated: 11-06-2004  12:26:12 UTC
 -----------------------------------------------------------------------------
 -->
 <PROJECT>
@@ -25,6 +25,7 @@
       ..\..\lib\c6\obj\JvFormMagnet.obj
       ..\..\lib\c6\obj\JvFormTransparent.obj
       ..\..\lib\c6\obj\JvFormWallpaper.obj
+      ..\..\lib\c6\obj\JvEmbeddedForms.obj
     "/>
     <RESFILES value="JvAppFrmC6R.res"/>
     <IDLFILES value=""/>
@@ -104,6 +105,7 @@
       <FILE FILENAME="..\..\run\JvFormMagnet.pas" FORMNAME="" UNITNAME="JvFormMagnet" CONTAINERID="PascalCompiler" DESIGNCLASS="" LOCALCOMMAND=""/>
       <FILE FILENAME="..\..\run\JvFormTransparent.pas" FORMNAME="" UNITNAME="JvFormTransparent" CONTAINERID="PascalCompiler" DESIGNCLASS="" LOCALCOMMAND=""/>
       <FILE FILENAME="..\..\run\JvFormWallpaper.pas" FORMNAME="" UNITNAME="JvFormWallpaper" CONTAINERID="PascalCompiler" DESIGNCLASS="" LOCALCOMMAND=""/>
+      <FILE FILENAME="..\..\run\JvEmbeddedForms.pas" FORMNAME="" UNITNAME="JvEmbeddedForms" CONTAINERID="PascalCompiler" DESIGNCLASS="" LOCALCOMMAND=""/>
   </FILELIST>
   <BUILDTOOLS>
   </BUILDTOOLS>
